# BEX

./: .gitignore  LICENSE  README.md  setup.cfg
src/bex/basis/: dvr.py
src/bex/bath/: correlation.py  distribution.py  sd.py
src/bex/heom/: eeom.py  eom.py
src/bex/libs/: backend.py  logging.py  quantity.py  utils.py
src/bex/operator/: spo.py
src/bex/prototypes/: bath.py  heom.py
src/bex/state/: __init__.py  frame.py  model.py
tests/: heom-bx.py  input_example.json
