[metadata]
name = BEX-vINyLogY
version = 0.1.0
author = Xinxian Chen
author_email = xchen106@ur.rochester.edu
description =  A general python package to simulate open quantum systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vINyLogY/BEX
project_urls =
    Bug Tracker = https://github.com/vINyLogY/BEX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 

[options.packages.find]
where = src
